feat: complete biz

--- a/biz/src/main/resources/templates/rent-map.html
+++ b/biz/src/main/resources/templates/rent-map.html
@@ -87,6 +87,7 @@
     </div>
 </div>
 <!--<div th:include="common :: footer"></div>-->
+<!-- 注意： 参数ak=Oi2uijgpb8tILz7Ys9Q48KbmmfHDSpjK是你的百度地图开放平台注册的那个accstKey，如果没有这个参数，是不可以使用百度地图的，这个是免费的-->
 <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=Oi2uijgpb8tILz7Ys9Q48KbmmfHDSpjK"></script>
 <script type="text/javascript" src="/static/js/baidu-map/TextIconOverlay.js"></script>
 <script type="text/javascript" src="/static/js/baidu-map/MarkerClusterer.js"></script>
